// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package workflows.v1;

import "workflow.proto";
import "common_carbide.proto";
import "forge_carbide.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nvidia/carbide-rest/workflow-schema/proto";

// SubnetInfo - response for subnet create request
message SubnetInfo {
  WorkflowStatus status = 1;
  ObjectStatus object_status = 2;
  string status_msg = 3;
  forge.NetworkSegment network_segment = 4;
}

// NetworkPrefixInfo - request parameters of network prefix
message NetworkPrefixInfo {
  string prefix = 1;
  optional string gateway = 2;
  int32 reserve_first = 3;
}

// CreateSubnetRequest - request parameters of subnet creation
message CreateSubnetRequest {
  string name = 1;
  common.UUID vpc_id = 2;
  optional common.UUID subdomain_id = 3;
  optional int32 mtu = 4;
  repeated NetworkPrefixInfo network_prefixes = 5;
  // Workflow Options
  optional WorkflowOptions options = 6;
  // ID of the subnet
  common.UUID subnet_id = 7;
}

// DeleteSubnetRequest - request parameters of subnet deletion
message DeleteSubnetRequest {
  common.UUID network_segment_id = 1;
  // Workflow Options
  optional WorkflowOptions options = 2;
}

// SubnetInventory - inventory info of all Subnets (Network Segments)
// periodically collected
message SubnetInventory {
  // List of Network Segments
  repeated forge.NetworkSegment segments = 1;
  // Reported timestamp of Segment inventory
  google.protobuf.Timestamp timestamp = 2;
  // Status of Inventory
  InventoryStatus inventory_status = 3;
  string status_msg = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
}
